--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "taiyaq-docs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "find  ./content -name \"*.md\" | xargs textlint"
   },
   "repository": {
     "type": "git",
