--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
   "gotoSymbolStack.currentStackPosition": 0,
   "gotoSymbolStack.maxStackPosition": 0,
   "gotoSymbolStack.filePositionInfo": [],
-  "textlint.autoFixOnSave": false,
-  "textlint.configPath": ".textlintrc"
+  "textlint.autoFixOnSave": true,
 }
