--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/taiyaq/docs#readme",
   "dependencies": {
     "textlint": "10.1.4",
-    "textlint-rule-preset-ja-technical-writing": "2.0.0"
+    "textlint-filter-rule-whitelist": "1.2.3",
+    "textlint-rule-preset-ja-technical-writing": "2.0.0",
+    "textlint-rule-spellcheck-tech-word": "5.0.0"
   }
 }
